--- a/style.css
+++ b/style.css
@@ -230,7 +230,7 @@ body{
     top: 4.1rem;
     height: 60vh;
     width: 100%;
-    position: fixed;
+    position: absolute;
 }
 .banner-area:after{
     content: '';
