--- a/style.css
+++ b/style.css
@@ -263,3 +263,21 @@ img{
     width: 90%;
     margin:0 auto;
 }
+
+#hp  {
+    float: right ;    
+     margin: 0 0 0 15px;
+    }
+
+    .button {
+        background-color: #B4DCED;
+        border: none;
+        color: black;
+        padding: 0.5rem 1rem;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 20px;
+        margin: 4px 2px;
+        cursor: pointer;
+      }
