--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ body{
 
 .content-area{
     width: 100%;
-    height: 62.5rem;
+    height: 100%;
     position: relative;
     background: #fff;
     top: 32rem;
