--- a/style.css
+++ b/style.css
@@ -253,6 +253,11 @@ body{
 
 img{
     float: right;
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: block;
 }
 
 .wrapper{
