--- a/style.css
+++ b/style.css
@@ -191,7 +191,8 @@ body{
 
 .content-area{
     width: 100%;
-    height: 62.5rem;
+    height: 100%;
+    min-height: 65rem;
     position: relative;
     background: #fff;
     top: 32rem;
