--- a/style.css
+++ b/style.css
@@ -253,12 +253,13 @@ body{
 }
 
 img{
-    float: right;
+    float: center;
     content: '';
-    position: absolute;
-    top: 5rem;
-    right: 0;
+    position: relative;
+    top:0;
     display: block;
+    max-width: 50%;
+    max-height: 50%;
 }
 
 .wrapper{
@@ -269,11 +270,6 @@ img{
     width: 90%;
     margin:0 auto;
 }
-
-#hp  {
-    float: right ;    
-     margin: 0 0 0 15px;
-    }
 
     .button {
         background-color: #B4DCED;
