--- a/style.css
+++ b/style.css
@@ -191,6 +191,7 @@ body{
 
 .content-area{
     width: 100%;
+    max-widht: 125rem;
     height: 100%;
     min-height: 65rem;
     position: relative;
