--- a/style.css
+++ b/style.css
@@ -192,6 +192,7 @@ body{
 .content-area{
     width: 100%;
     max-widht: 125rem;
+    min-widht: 20rem;
     height: 100%;
     min-height: 65rem;
     position: relative;
