--- a/style.css
+++ b/style.css
@@ -255,13 +255,12 @@ body{
 }
 
 img{
-    float: center;
+    margin: 0 0 0 auto;
     content: '';
     position: relative;
     top:0;
     display: block;
     max-width: 50%;
-    max-height: 50%;
 }
 
 .wrapper{
