--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@
 }
 
 .navbar a:hover{
-    color: #ffffff;
+    color: #FFFFFD;
 }
 
 @media (max-width: 768px){
@@ -193,7 +193,7 @@ body{
     width: 100%;
     height: 100%;
     position: relative;
-    background: #fff;
+    background: #FFFFFD;
     top: 32rem;
     opacity:100%; 
 }
@@ -249,7 +249,7 @@ body{
 .banner-area h2{
     padding-top: 8%;
     font-size: 4.5rem;
-    color: #fff;
+    color: #FFFFFD;
 }
 
 img{
