--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ body{
 
 .content-area{
     width: 100%;
-    height: 100%;
+    height: auto;
     position: relative;
     background: #FFFFFD;
     top: 32rem;
