--- a/style.css
+++ b/style.css
@@ -270,15 +270,42 @@ img{
     margin:0 auto;
 }
 
+      input[type=email] {
+        width: 20%;
+        padding: 0.3125rem; 
+        border: 0.125rem solid #ccc; 
+        -webkit-border-radius: 5px;
+        border-radius: 0.3125rem;
+    }
+    
+    input[type=text] {
+        width: 20%;
+        padding: 0.3125rem; 
+        border: 0.125rem solid #ccc; 
+        -webkit-border-radius: 5px;
+        border-radius: 0.3125rem;
+    }
+    
     .button {
-        background-color: #B4DCED;
-        border: none;
-        color: black;
-        padding: 0.5rem 1rem;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 20px;
-        margin: 4px 2px;
-        cursor: pointer;
-      }
+      display: inline-block;
+      padding: 0.5rem 1.25rem;
+      font-size: 1.125rem;
+      cursor: pointer;
+      text-align: center;
+      text-decoration: none;
+      outline: none;
+      color: black;
+      background-color: #B4DCED;
+      border: none;
+      border-radius: 0.9375rem;
+      box-shadow: 0 0.5625rem #999;
+    }
+    
+    .button:hover {background-color: #3e8e41}
+    
+    .button:active {
+      background-color: #B4DCED;
+      box-shadow: 0 0.3125rem #666;
+      transform: translateY(0.25rem);
+    }
+
