--- a/style.css
+++ b/style.css
@@ -308,3 +308,11 @@ img{
       box-shadow: 0 0.3125rem #666;
       transform: translateY(0.25rem);
     }
+
+
+.imginstructors{
+    width: 20%;
+    content: '';
+    position: relative;
+    display: block;
+}
