--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
     box-shadow: 0px 5px 10px 0px #aaa;
     position: fixed;
     width: 100%;
-    background: rgb(255, 3, 3);
+    background: #D9C6B0;
     color: #000;
     opacity: 0.85;
     z-index: 100;
@@ -62,7 +62,7 @@
 }
 
 .navbar a:hover{
-    color: #787F00;
+    color: #F2E3D5;;
 }
 
 @media (max-width: 768px){
@@ -130,7 +130,7 @@
 
     .navbar .menu-items{
         padding-top: 100px;
-        background: #fff;
+        background: #D9C6B0;
         height: 100vh;
         max-width: 300px;
         transform: translate(-150%);
@@ -194,8 +194,8 @@ body{
     height: auto;
     min-height: 50rem;
     position: relative;
-    background: #FFFFFD;
-    top: 32rem;
+    background: #F2EFEB;
+    top: 25rem;
     opacity:100%; 
 }
 .content-area h2{
@@ -226,10 +226,10 @@ body{
 }
 
 .banner-area{
-    background-image: url(https://github.com/Mr9822/Mr9822.github.io/blob/main/Photos/Judo.jpg?raw=true);
+    background-image: url(Photos/colorlogo.png);
     background-size: cover;
     background-position: center center;
-    top: 4.1rem;
+    top: 1.8rem;
     height: 60vh;
     width: 100%;
     position: fixed;
@@ -242,7 +242,6 @@ body{
     display: block;
     width: 100%;
     height: 100%;
-    background: #130f40;
     opacity: .7;
     z-index: -1;
 }
@@ -295,10 +294,10 @@ img{
       text-decoration: none;
       outline: none;
       color: black;
-      background-color: #B4DCED;
+      background-color: #3D847E;
       border: none;
       border-radius: 0.9375rem;
-      box-shadow: 0 0.5625rem #999;
+      box-shadow: 0 0.5625rem #DECFBD;
     }
     
     .button:hover {background-color: #3e8e41}
