--- a/style.css
+++ b/style.css
@@ -234,6 +234,19 @@ body{
     width: 100%;
     position: fixed;
 }
+
+@media only screen and (max-width: 500px){
+  .banner-area{
+    background-image: url('Photos/Colorlogosmall.jpg');
+    background-size: cover;
+    background-position: center center;
+    top: 2rem;
+    height: 60vh;
+    width: 100%;
+    position: fixed;
+  }
+}
+
 .banner-area:after{
     content: '';
     position: absolute;
