--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ body{
     background-size: cover;
     background-position: center center;
     top: 2rem;
-    height: 40vh;
+    height: auto;
     width: 100%;
     position: fixed;
   }
