--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ body{
     position: fixed;
 }
 
-@media only screen and (max-width: 500px){
+@media only screen and (max-width: 31.25rem){
   .banner-area{
     background-image: url('Photos/Colorlogosmall.jpg');
     background-size: cover;
