--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@ body{
 
 @media only screen and (max-width: 31.25rem){
   .banner-area{
-    background-image: url('Photos/Colorlogosmall.jpg');
+    background-image: url('Photos/small.jpg');
     background-size: cover;
     background-position: center center;
     top: 2rem;
