--- a/style.css
+++ b/style.css
@@ -230,7 +230,7 @@ body{
     background-size: cover;
     background-position: center center;
     top: 2rem;
-    height: 60vh;
+    height: 60%;
     width: 100%;
     position: fixed;
 }
