--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ body{
 }
 
 .banner-area{
-    background-image: url(Photos/bannerlogo2.jpg);
+    background-image: url(Photos/mapledojobanner.jpg);
     background-size: cover;
     background-position: center center;
     top: 4rem;
