--- a/style.css
+++ b/style.css
@@ -235,6 +235,17 @@ body{
     position: fixed;
 }
 
+@media only screen and (max-width: 31.25rem){
+  .banner-area{
+    background-image: url('Photos/bannerlogosmall.jpg');
+    background-size: 100% 100%;
+    background-position: center center;
+    top: 4rem;
+    height: 60vh;
+    width: 100%;
+    position: fixed;
+  }
+}
 
 
 .banner-area:after{
