--- a/style.css
+++ b/style.css
@@ -230,7 +230,7 @@ body{
     background-size: 100% 100%;
     background-position: center center;
     top: 4rem;
-    height: 50vh;
+    height: 50%;
     width: 100%;
     position: fixed;
 }
@@ -241,7 +241,7 @@ body{
     background-size: 100% 100%;
     background-position: center center;
     top: 4rem;
-    height: 60vh;
+    height: 40%;
     width: 100%;
     position: fixed;
   }
