--- a/style.css
+++ b/style.css
@@ -299,14 +299,13 @@ img{
     box-shadow: 0 0.5625rem #DECFBD;
     }
     
-    .button:hover {background-color: #DECFBD}
+.button:hover {background-color: #DECFBD}
     
-    .button:active {
+.button:active {
       background-color: #B4DCED;
       box-shadow: 0 0.3125rem #E3908C;
       transform: translateY(0.25rem);
-    }
-
+}
 
 .imginstructors{
     width: 20%;
@@ -315,13 +314,12 @@ img{
     display: block;
 }
 
-
 .emphasis{
     font-style: italic; 
 }
 
 
-
+/* Facebook logo*/
 .fa {  
     padding: 20px;  
     text-align: center;  
@@ -339,6 +337,7 @@ img{
 }  
 
 
+/*Contact us page*/
 /* Style inputs, select elements and textareas */
 input[type=text], select, textarea{
     width: 100%;
@@ -403,274 +402,146 @@ input[type=text], select, textarea{
 
 
 
-html, body {
-  max-width: 100vw;
-  overflow-x: hidden;
-  background-color: #fff;
-  padding: 0 !important;
-  margin: 0 !important;
-  min-height: 600px
+/* ===== MEET THE TEAM PAGE===== */
+.pen-info {
+    flex: 0 0 100%;
+    text-align: center;
 }
 
-#wrapper_team {
-  display: block;
-  margin: 0 auto;
-  width: 90%;
-  top: 0;
-  bottom: 0;
-  padding: 0rem 0rem 1rem 0rem;
-  background-color: #ddd;
-  font-family: 'Lora', serif;
-  height: 100%;
+.pen-info__title {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2.5rem;
+    letter-spacing: 1px;
+    margin: 0;
 }
 
-.title_team {
-  display: flex;
-  flex-flow: column nowrap;
-  width: 100%;
-  background-color: #bbb;
-  margin-top: 0 !important;
-  padding: 2rem 0;
-  align-items: center;
-  justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 3rem;
+.pen-info__p {
+    font-size: 17px;
 }
 
-.title_team h1 {
-  font-size: 4rem;
-  margin-bottom: 0;
-  font-family: 'Montserrat', sans-serif;
-  font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
-  font-weight:800;
-  text-transform: uppercase;
-  text-rendering: optimizeLegibility;
-  letter-spacing: .05em;
-  text-shadow: 
-    5px 5px 0px #d5d5d5, 
-    8px 8px 0px rgba(0, 0, 0, 0.2);
+
+.demo {
+    margin: 0 auto;  
+    position: relative;
+
+
+    display: flex; 
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
-#teamcontent {
-  display: none;
-  margin-bottom: 15px;
+.demo__div {
+
+    -webkit-box-shadow: -1px 9px 18px -5px rgba(17,17,17,1);
+    -moz-box-shadow: -1px 9px 18px -5px rgba(17,17,17,1);
+    box-shadow: -1px 9px 18px -5px rgba(17,17,17,1);    
 }
 
-.team_box {
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: inherit;
-  align-items: inherit;
-  width: 100%;
+
+/* ===== MAIN CODE ===== */
+.people {
+    flex: 0 0 23%;
+    min-width: 350px;
+    height: 400px;
+    margin: 25px 5px 0;
+    background-color: rgba(229,229,229, 1);
+    position: relative;
+    backface-visibility: hidden;
+    overflow: hidden;
+    backface-visibility: hidden;
 }
 
-.container-left {
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-content: center;
-  float: left;
-  width: 30%;
-}
-
-.container-right {
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-content: center;
-  width: 50%;
-}
-
-.team {
-  display: block;
-  max-width: unset;
-}
-
-ul li:before {
-  display: none;
-}
-
-.team li {
-  display: block;
-  float: left;
-  width: 16%;
-  margin-right: 0px;
-  padding-left: unset;
-}
-.team li:hover {
-  cursor: pointer;
-}
-
-.team li:last-child {
-  margin-right: 0;
-}
-
-.team .hcontent {
-  display: none;
-}
-
-#teamcontent .bigimg {
-  display: block;
-  float: right;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: top center;
-  border-radius: 50%;
-  width: 220px;
-  height: 220px;
-  margin: 4rem;
-  -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.5);
--moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.5);
-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.5);
-}
-
-.bigimg-overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: 0.5s ease-in-out;
-background-image: linear-gradient(15deg, rgba(19, 84, 122, 0.7) 0%, rgba(128, 208, 199, 0.7) 100%);
-}
-
-.profile_container::after {
-  content: "";
-  display: block;
-  width: 70%;
-  background: rgba(255, 255, 255, 0.2);
-  background: linear-gradient(
-    0deg,
-    rgba(255, 255, 255, 0.2)50%,
-    rgba(255, 255, 255, 0.7)100%
-  );
-  background: -o-linear-gradient(
-    0deg,
-    rgba(255, 255, 255, 0.2)50%,
-    rgba(255, 255, 255, 0.7)100%
-  );
-  background: -moz-linear-gradient(
-    0deg,
-    rgba(255, 255, 255, 0.2)50%,
-    rgba(255, 255, 255, 0.7)100%
-  );
-  background: linear-gradient(
-    0deg,
-    rgba(255, 255, 255, 0.2)50%,
-    rgba(255, 255, 255, 0.7)100%
-  );
-  left: -100%;
-  top: 0;
-  height: 100%;
-  position: absolute;
-  transition: none;
-  -webkit-transition: none;
-  -moz-transition: none;
-  -o-transition: none;
-  -ms-transition: none;
-  -ms-transform: skewX(-20deg);
-  -webkit-transform: skewX(-20deg);
-  transform: skewX(-20deg);
-}
-
-.profile_container:hover::after {
-  left: 150%;
-  transition: all 1s;
-  -webkit-transition: all 0.75s;
-  -moz-transition: all 0.75s;
-  -o-transition: all 0.75s;
-  -ms-transition: all 0.75s;
-}
-
-.profile_container:hover .bigimg-overlay {
-  opacity: 1;
-}
-
-.bigimg-text {
-  color: #ffffff;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-.profile_container {
-  position: relative;
-  overflow: hidden;
-}
-
-.profilepic {
-  width: 100% !important;
-  height: auto;
-  display: block;
-}
-
-#teamdetails {
-  display: block;
-  float: left;
-  width: 600px;
-  padding-left: 15px;
-}
-
-.clearfix:after {
-  content: ".";
-  display: block;
-  clear: both;
-  visibility: hidden;
-  line-height: 0;
-  height: 0;
-}
-
-.clearfix {
-  display: flex;
-  flex-flow: row nowrap;
-}
-
-html[xmlns] .clearfix {
-  display: flex;
-}
-
-* html .clearfix {
-  height: 1%;
-}
-
-.flipimg {
-  -webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
-}
-
-@media only screen and (max-width: 900px) {
-  #teamdetails {
-    width: unset;
-    padding-left: unset;
-  }
-  li {
-    padding-left: unset;
-  }
-  .profile_container {
+.people__img {
     width: 100%;
-  }
-  #teamcontent .bigimg {
-    margin: 2rem 0;
-  }
-  .bigimg-overlay {
+    height: 400px;
+    margin: 0 auto;
+    display: block;
+    object-fit: cover;
+    object-position: center;
+    transform-origin: center;
+    transition: all 0.4s;
+}
+
+
+.people:hover .people__img {
+    margin-top: 20px;
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+}
+
+.people:nth-of-type(1) .people__img {
+    object-position: top center;
+    background-color: #fff;
+}
+
+
+.people__div--name {
+    background-color: rgba(255,255,255, 0.8);    
+    position: absolute;
+    bottom: 5%;
+    left: 0;
+    width: 100%;
+    max-width: 300px;
+    line-height: 1.5;
+    padding: 0 20px;
+    transition: all 0.4s;
+}
+
+
+.people:hover .people__div--name {
+    left: -130%;
+}
+
+.people-name {
+    letter-spacing: 1px;
+}
+
+.people__div--info {
+    position: absolute;
+    bottom: 0;
+    height: 50%;
+    padding: 10px;
+    opacity: 0;
+    visibility: hidden;
+    overflow-y: auto;
+
+    background-color: #fff;
+    transition: all 0.4s;
+}
+
+.people:hover .people__div--info {
     opacity: 1;
-  }
-  .team li {
-    margin-right: unset;
-    width: 100%;
-  }
-  #wrapper_team {
-    padding: 0;
-  }
-  .clearfix {
-    flex-flow: column nowrap;
-  }
+    visibility: visible;
+}
+
+.people__name {
+    margin: 10px 0;
+    letter-spacing: 1px;
+}
+
+.people__desc {
+    line-height: 1.5;
+    margin: 0 0 20px;
+}
+
+
+@media only screen and (max-width: 1200px) {
+    .people {
+        flex: 0 0 48%;
+    }
+}
+
+@media only screen and (max-width: 767px) { 
+    body {
+        padding: 50px 20px;
+    }
+
+    .people {
+        flex: 0 0 100%;
+        min-width: unset;
+        max-width: 400px;
+        margin: 25px auto 0;
+    }
 }
