--- a/style.css
+++ b/style.css
@@ -558,7 +558,7 @@ input[type=text], select, textarea{
 	display: flex;
 	flex-wrap: wrap;
 	/* Compensate for excess margin on outer gallery flex items */
-	margin: -1rem -1rem;
+	/*margin: -1rem -1rem;*/
 }
 
 .gallery-item {
