--- a/style.css
+++ b/style.css
@@ -572,8 +572,8 @@ input[type=text], select, textarea{
 
 .gallery-image {
 	display: block;
-	width: 110%;
-	object-fit: cover;
+	width: 100%;
+	object-fit: fill;
 	transition: transform 400ms ease-out;
 }
 
