--- a/style.css
+++ b/style.css
@@ -267,7 +267,7 @@ body{
     color: #FFFFFD;
 }
 
-img{
+.schedule-img{
     content: '';
     position: relative;
     top:0;
@@ -575,7 +575,6 @@ input[type=text], select, textarea{
 	width: 100%;
 	object-fit: cover;
 	transition: transform 400ms ease-out;
-	position: relative;
 }
 
 .gallery-image:hover {
