--- a/style.css
+++ b/style.css
@@ -588,7 +588,7 @@ input[type=text], select, textarea{
   position: relative;
   line-height: 1.4em;
   font-size: 1.03em;
-  padding: 30px;
+  padding: 2rem;
   list-style: none;
   text-align: left;
   font-weight: 1;
