--- a/style.css
+++ b/style.css
@@ -609,7 +609,7 @@ input[type=text], select, textarea{
   position: relative;
 }
 .timeline .event:last-of-type {
-  padding-bottom: 0;
+  padding-bottom: 2rem;
   margin-bottom: 0;
   border: none;
 }
