--- a/style.css
+++ b/style.css
@@ -659,3 +659,13 @@ input[type=text], select, textarea{
       position: relative;
   }
 }
+
+
+h4 {
+  font-family: 'Oswald', sans-serif;
+  letter-spacing: 1.5px;
+  color: #333333;
+  font-weight: 100;
+  font-size: 2.4em;
+  padding-top: 10rem;
+}	
