--- a/style.css
+++ b/style.css
@@ -666,6 +666,6 @@ h4 {
   letter-spacing: 1.5px;
   color: #333333;
   font-weight: 100;
-  font-size: 2.4em;
+  font-size: 2.4rem;
   padding-top: 10rem;
 }	
