--- a/style.css
+++ b/style.css
@@ -679,5 +679,8 @@ color: #3D847F;
 
 @media (max-width: 768px){
     .logo{
-        font-size: 1.5rem;
+    	position: absolute;
+   	 top: 10px;
+   	 right: 15px;
+   	 font-size: 1.8rem;
     }
