--- a/style.css
+++ b/style.css
@@ -678,9 +678,13 @@ color: #3D847F;
 }
 
 @media (max-width: 768px){
-    .logo{
+    .logo
     	position: absolute;
    	 top: 10px;
    	 right: 15px;
-   	 font-size: 1.8rem;
+   	 font-size: 2rem;
     }
+@media (max-width: 768px){
+	.social-icon
+	display: none;
+	}
