--- a/style.css
+++ b/style.css
@@ -681,6 +681,6 @@ color: #3D847F;
     .logo
     	position: absolute;
    	 top: 10px;
-   	 right: 15px;
+   	 right: 0.2rem;
    	 font-size: 1.5rem;
     }
