--- a/style.css
+++ b/style.css
@@ -276,7 +276,8 @@ body{
     margin:0 auto;
 }
 
-    
+
+/* BUTTON DEACTIVATED    
 .button {
     display: inline-block;
     padding: 0.5rem 1.25rem;
@@ -299,6 +300,7 @@ body{
       box-shadow: 0 0.3125rem #E3908C;
       transform: translateY(0.25rem);
 }
+*/
 
 .imginstructors{
     width: 20%;
