--- a/style.css
+++ b/style.css
@@ -753,7 +753,7 @@ color: #3D847F;
           }
           
           .description-button:hover {
-            background-color: green;
+            background-color: #3F847F;
             cursor: pointer;
             transition-duration: 0.3s;
           }
