--- a/style.css
+++ b/style.css
@@ -727,7 +727,7 @@ color: #3D847F;
             font-family: var(--font-em);
             font-size: 26px;
             font-weight: bold;
-            color: blue;
+            color: #3F847F;
           }
           
           .description-option p {
