--- a/style.css
+++ b/style.css
@@ -710,7 +710,7 @@ color: #3D847F;
             border-radius: 40px;
             display: flex;
             flex-direction: column;
-            background-color: #3B5998;
+            background-color: #DECFBD;
           }
           
           .description-option h4 {
