--- a/style.css
+++ b/style.css
@@ -743,7 +743,7 @@ color: #3D847F;
             margin-top: 10px;
             height: 40px;
             width: 100%;
-            background-color: red;
+            background-color: #F1EFEA;
             border-radius: 20px;
             border-style: none;
             font-family: var(--font-em);
@@ -753,7 +753,7 @@ color: #3D847F;
           }
           
           .description-button:hover {
-            background-color: #3F847F;
+            background-color: #DDCFBD;
             cursor: pointer;
             transition-duration: 0.3s;
           }
