--- a/style.css
+++ b/style.css
@@ -747,7 +747,7 @@ color: #3D847F;
             border-radius: 20px;
             border-style: none;
             font-family: var(--font-em);
-            color: silver;
+            color: black;
             font-size: 16px;
             font-weight: bold;
           }
