--- a/style.css
+++ b/style.css
@@ -717,7 +717,7 @@ color: #3D847F;
             padding: 10px;
             font-family: var(--font-em);
             font-size: 20px;
-            color: pink;
+            color: black;
             text-transform: uppercase;
           }
           
