--- a/style.css
+++ b/style.css
@@ -579,7 +579,7 @@ input[type=text], select, textarea{
 
 /* Timeline */
 .timeline {
-  border-left: 4px solid #4298c3;
+  border-left: 4px solid #DECFBD;
   border-bottom-right-radius: 4px;
   border-top-right-radius: 4px;
   background: rgba(255, 255, 255, 0.03);
@@ -605,7 +605,7 @@ input[type=text], select, textarea{
   font-size: 1.4em;
 }
 .timeline .event {
-  border-bottom: 1px dashed #4298c3;
+  border-bottom: 1px dashed #DECFBD;
   padding-bottom: 25px;
   margin-bottom: 50px;
   position: relative;
@@ -623,7 +623,7 @@ input[type=text], select, textarea{
 }
 .timeline .event:before {
   left: -217.5px;
-  color: #717171;
+  color: black;
   content: attr(data-date);
   text-align: right;
   font-weight: 400;
@@ -631,7 +631,7 @@ input[type=text], select, textarea{
   min-width: 120px;
 }
 .timeline .event:after {
-  box-shadow: 0 0 0 4px #169eda;
+  box-shadow: 0 0 0 4px #DECFBD;
   left: -57.85px;
   background: #91c740;
   border-radius: 50%;
@@ -645,7 +645,7 @@ input[type=text], select, textarea{
   .timeline .event:before {
     left: -0.5px;
     top: -3rem;
-    background-color: #4298c3;
+    background-color: #DECFBD;
     color: white;
     margin-top: 8px;
     padding: 2px 8px 2px 8px;
