--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ body{
 }
 
 .banner-area{
-    background-image: url('Photos/dojobanner.png');
+    background-image: url('Photos/dojocolor1.png');
     background-size: 100% 100%;
     background-position: center center;
     top: 4rem;
