--- a/style.css
+++ b/style.css
@@ -706,7 +706,7 @@ color: #3D847F;
         padding: 10px;
         width: 100%;
         max-width: 300px;
-        border: 1px solid green;
+        border: 2px solid #4F9A90;
         border-radius: 40px;
         display: flex;
         flex-direction: column;
