--- a/style.css
+++ b/style.css
@@ -633,7 +633,7 @@ input[type=text], select, textarea{
 .timeline .event:after {
   box-shadow: 0 0 0 4px #DECFBD;
   left: -57.85px;
-  background: #91c740;
+  background: #4F9A90;
   border-radius: 50%;
   height: 11px;
   width: 11px;
