--- a/alternativestyle2.css
+++ b/alternativestyle2.css
@@ -111,3 +111,10 @@
     font-size: 18px;
     line-height: 1.6;
   }
+
+.icons8-credit {
+  font-size: 14px;
+  text-align: center;
+  margin-top: 30px;
+  color: gray;
+}
