--- a/style.css
+++ b/style.css
@@ -784,6 +784,40 @@ iframe{
   border-radius: 10px;
   }
 
+/* New Schedule Layout */
+
+ .schedule-area {
+   margin-top: 4rem;
+   padding: 2rem;
+   background-color: #FFF;
+   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+.schedule-title {
+   font-size: 2rem;
+   margin-bottom: 1.5rem;
+        }
+
+.schedule-table {
+   width: 100%;
+   border-collapse: collapse;
+        }
+
+.schedule-table th,
+.schedule-table td {
+   padding: 0.5rem;
+   border: 1px solid #CCC;
+        }
+
+.schedule-table th {
+   background-color: #F2EFEB;
+   font-weight: bold;
+        }
+
+.schedule-table td {
+   text-align: center;
+        }
+
 
 .red{
   color: white;
