--- a/style.css
+++ b/style.css
@@ -846,3 +846,62 @@ iframe{
 .info-link:hover {
     color: #DECFBD;
 }
+
+/* Instructors Section */
+
+        .instructors-section {
+          margin-top: 4rem;
+          padding: 2rem;
+          background-color: #F2EFEB;
+          box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+      }
+
+      .instructors-title {
+          font-size: 2rem;
+          margin-bottom: 1.5rem;
+          text-align: center;
+      }
+
+      .instructor-card {
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+          gap: 2rem;
+      }
+
+      .instructor-card__image {
+          width: 200px;
+          height: 200px;
+          border-radius: 50%;
+          overflow: hidden;
+      }
+
+      .instructor-card__image img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+      }
+
+      .instructor-card__info {
+          text-align: center;
+          max-width: 300px;
+      }
+
+      .instructor-card__name {
+          font-size: 1.5rem;
+          margin-top: 1rem;
+      }
+
+      .instructor-card__desc {
+          margin-top: 0.5rem;
+      }
+
+      .instructor-card__desc a {
+          color: #3D847E;
+          text-decoration: none;
+          transition: color 0.3s ease-in-out;
+      }
+
+      .instructor-card__desc a:hover {
+          color: #DECFBD;
+      }
