--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ body{
 }
 
 .banner-area{
-    background-image: url('Photos/judobjjlogo.png');
+    background-image: url('Photos/padded_logo.png');
     background-size: cover;
     background-position: center center;
     top: 4rem;
