--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ body{
 
 .banner-area{
     background-image: url('Photos/judobjjlogo.png');
-    background-size: contain;
+    background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
     top: 4rem;
