--- a/style.css
+++ b/style.css
@@ -227,8 +227,8 @@ body{
 }
 
 .banner-area{
-    background-image: url('Photos/padded_logo.png');
-    background-size: 100%;
+    background-image: url('Photos/judobjjlogo.png');
+    background-size: 100% 100%;
     background-position: center center;
     top: 4rem;
     height: 50%;
