--- a/style.css
+++ b/style.css
@@ -227,9 +227,10 @@ body{
 }
 
 .banner-area{
-    background-image: url('Photos/canvabanner.png');
+    background-image: url('Photos/judobjjlogo.png');
     background-size: 100% 100%;
     background-position: center center;
+    top: 4rem;
     height: 50%;
     width: 100%;
     position: fixed;
