--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 .html{
     font-size: 0.625rem;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Roboto, Arial, Helvetica, sans-serif;
 }
 
 /*Nabar*/
@@ -184,7 +184,7 @@
 /*BODY*/
 
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Roboto, Arial, Helvetica, sans-serif;
     text-align: center;
 }
 
