--- a/style.css
+++ b/style.css
@@ -686,7 +686,7 @@ color: #3D847F;
           }
 /*DESCRIPTION END*/
 
-  @media only screen and (max-width: 768px) { 
+
 /*BOX STYLING*/
 .box {
   position: relative;
@@ -752,6 +752,16 @@ color: #3D847F;
 .box a:hover {
   color: #DECFBD;
 }
+
+  @media only screen and (max-width: 768px) { 
+
+    .box{
+        max-width: 95%;
+    }
+    .box h5{
+        font-size: 1.3rem;    
+    }
+   }
 
 
 
