--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 .html{
     font-size: 0.625rem;
-    font-family: Roboto, Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /*Nabar*/
