--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@
 /*BODY*/
 
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Roboto, Arial, Helvetica, sans-serif;
     text-align: center;
 }
 
