--- a/style.css
+++ b/style.css
@@ -236,17 +236,19 @@ body{
     position: fixed;
 }
 
-@media only screen and (max-width: 31.25rem){
-  .banner-area{
+@media only screen and (max-width: 31.25rem) {
+  .banner-area {
     background-image: url('Photos/roundlogo.png');
-    background-size: 100% 100%;
-    background-position: center center;
+    background-size: contain; /* Use contain to keep the aspect ratio */
+    background-repeat: no-repeat; /* Prevent tiling of the image */
+    background-position: center center; /* Center the image in the container */
     top: 4rem;
-    height: 40%;
+    height: 40vh; /* Use viewport height for more consistent scaling */
     width: 100%;
     position: fixed;
   }
 }
+
 
 
 .banner-area:after{
