--- a/style.css
+++ b/style.css
@@ -243,7 +243,7 @@ body{
     background-repeat: no-repeat; /* Prevent tiling of the image */
     background-position: center center; /* Center the image in the container */
     top: 4rem;
-    height: 40vh; /* Use viewport height for more consistent scaling */
+    height: auto; /* Adjust height based on content */
     width: 100%;
     position: fixed;
   }
