--- a/style.css
+++ b/style.css
@@ -242,9 +242,10 @@ body{
     background-size: contain; /* Scale the image proportionally */
     background-repeat: no-repeat; /* Prevent the image from repeating */
     background-position: center center; /* Center the image both vertically and horizontally */
+    background-color: #4f9a91; /* Replace with the actual color code of the logo's background */
     top: 4rem;
     width: 100%; /* Full width */
-    height: 400px; /* Fixed height, adjust as needed */
+    height: 305px; /* Fixed height, adjust as needed */
     position: fixed;
     display: flex; /* Use flexbox to center content if needed */
     justify-content: center; /* Center horizontally */
