--- a/style.css
+++ b/style.css
@@ -226,14 +226,15 @@ body{
     font-size: 1.15rem;
 }
 
-.banner-area{
-    background-image: url('Photos/judobjjlogo.png');
-    background-size: 100% 100%;
-    background-position: center center;
-    top: 4rem;
-    height: 50%;
-    width: 100%;
-    position: fixed;
+.banner-area {
+  background-image: url('Photos/longlogo.png');
+  background-size: cover; /* Scale the image to cover the container */
+  background-position: center center; /* Center the image */
+  background-color: #4f9a91; /* Replace with the actual color code of the logo's background */
+  top: 4rem;
+  width: 100%; /* Full width */
+  height: 300px; /* Fixed height, adjust as needed */
+  position: fixed;
 }
 
 @media only screen and (max-width: 31.25rem) {
