--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ body{
 
 .banner-area {
   background-image: url('Photos/longlogo.png');
-  background-size: cover; /* Scale the image to cover the container */
+  background-size: contain; /* Maintain the aspect ratio of the logo */
   background-position: center center; /* Center the image */
   background-color: #4f9a91; /* Replace with the actual color code of the logo's background */
   top: 4rem;
