--- a/style.css
+++ b/style.css
@@ -229,6 +229,7 @@ body{
 .banner-area {
   background-image: url('Photos/longlogo.png');
   background-size: contain; /* Maintain the aspect ratio of the logo */
+  background-repeat: no-repeat; /* Prevent the image from repeating */
   background-position: center center; /* Center the image */
   background-color: #4f9a91; /* Replace with the actual color code of the logo's background */
   top: 4rem;
@@ -236,6 +237,7 @@ body{
   height: 300px; /* Fixed height, adjust as needed */
   position: fixed;
 }
+
 
 @media only screen and (max-width: 31.25rem) {
   .banner-area {
