--- a/tinytotsstorylinestyles.css
+++ b/tinytotsstorylinestyles.css
@@ -90,3 +90,25 @@ h1 {
     font-size: 16px;
   }
 }
+/* Language Selection Styles */
+#language-selection {
+  appearance: none;
+  background-color: #fff;
+  border: 2px solid #4F9A90;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 16px;
+  color: #4F9A90;
+  cursor: pointer;
+}
+
+#language-selection option {
+  font-size: 16px;
+  color: #4F9A90;
+}
+
+/* Hover effect for Language Selection */
+#language-selection:hover {
+  background-color: #4F9A90;
+  color: #fff;
+  cursor: pointer;
