--- a/alternative4.css
+++ b/alternative4.css
@@ -143,7 +143,7 @@ h1 {
   background-color: #4F9A90;
   color: #fff;
   cursor: pointer;
-
+}
 /* Media Query for Responsiveness */
 @media screen and (max-width: 600px) {
   .container {
