--- a/khk.css
+++ b/khk.css
@@ -10,7 +10,7 @@ body {
 
 /* Header */
 header {
-    background-color: #4A90E2;
+    background-color: #4F9A90;
     color: #fff;
     padding: 2rem 1rem;
     text-align: center;
