--- a/khk.css
+++ b/khk.css
@@ -86,7 +86,7 @@ a:hover {
 
 .button {
     display: inline-block;
-    background-color: #0066cc;
+    background-color: #4F9A90;
     color: #fff;
     padding: 0.6rem 1.2rem;
     margin-top: 1rem;
